# integreted_xlsxeditor_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: DataItem.md  XLSXEditor.md
include/: DataItem.hpp  DataTypes.hpp  XLSXEditor.hpp
include/cc/neolux/fem/xlsxeditor/: DataItem.hpp  XLSXEditor.hpp
src/: DataItem.cpp  DataItem.ui  XLSXEditor.cpp  XLSXEditor.ui  main.cpp
translations/: XLSXEditor_zh_CN.qm  XLSXEditor_zh_CN.ts
